--- a/my-project/package.json
+++ b/my-project/package.json
@@ -13,6 +13,7 @@
     "date-fns": "^4.1.0",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
+    "react-icons": "^5.5.0",
     "react-router-dom": "^7.5.3"
   },
   "devDependencies": {
